Fixed plate opacity for better readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,9 +24,9 @@ body {
     font-size: 100px;
     font-weight: bolder;
     color: black;
-  -webkit-text-fill-color: yellow; /* Will override color (regardless of order) */
+  /*-webkit-text-fill-color: yellow; /* Will override color (regardless of order) 
   -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
+  -webkit-text-stroke-color: black; */
 }
 
 .instructions-row {
@@ -36,9 +36,9 @@ margin: 0 auto;
 padding: 20px;
 font-size: 20px;
 font-weight: bolder;
--webkit-text-fill-color: yellow; /* Will override color (regardless of order) */
+/* -webkit-text-fill-color: yellow; /* Will override color (regardless of order) 
   -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
+  -webkit-text-stroke-color: black; */
 }
 
 .word-block {
